<resources>
    <string name="app_name">Cimon-1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="beat">Beat</string>
    <string name="cimon_says">Cimon Says</string>
    <string name="speed">Speed</string>
    <string name="R">R</string>
    <string name="Y">Y</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="P">P</string>
    <string name="Pause">Pause</string>
    <string name="About">About</string>
    <string name="Start">Start</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Settings">Settings</string>
    <string name="Game_Modes">Game Modes</string>
    <string name="Cimon_Says">Cimon Says</string>
    <string name="Madness">Madness</string>
    <string name="Frequency_Beat">Frequency</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="Audio">Audio</string>
    <string name="Rank">Rank</string>
    <string name="Name">Name</string>
    <string name="Score">Score</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Time">Time</string>
    <string name="Attention_Span">Attention Span</string>
    <string name="Logout">Logout</string>
    <string name="Profile_Name">Profile Name</string>
    <string name="Blind_Mode">Blind Mode</string>
    <string name="None">None</string>
    <string name="Trianopia">Trianopia</string>
    <string name="Deuteranopia">Deuteranopia</string>
    <string name="Protanopia">Protanopia</string>
    <string name="Mute">Mute</string>
    <string name="Unmute">Unmute</string>
    <string name="Sound_Effects">Sound Effects</string>
    <string name="Effects">Effects</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Volume_Control">Volume Control</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="Profile">Profile</string>
    <string name="picture">Add Your Profile Picture</string>
    <string name="percentage">0%</string>
<!--    -->
<!--    <string name="About_Cimon">Introducing Cimon, a dynamic and engaging mobile app designed to provide endless entertainment and challenge your cognitive skills. Similar to the classic game Simon Says, Cimon adds its own unique twist with five vibrant colors and two additional thrilling game modes.-->

<!--In the Original mode, Cimon Says, players must follow the color sequence dictated by the app, testing their memory and attention to detail. It\'s a classic challenge with a modern twist.-->

<!--For those seeking a faster-paced experience, Lightning Speed mode pushes your reflexes to the limit. Race against the clock to tap each color as quickly as possible, testing your reaction time and agility.-->

<!--But the excitement doesn't stop there. With Frequency Beat mode, Cimon transforms into a rhythm-based adventure where players sync their taps with the music. Each color pattern syncs dynamically with the beat, offering a fresh challenge with every playthrough.-->

<!--Whether you're a casual gamer looking for some fun or a competitive player seeking a challenge, Cimon has something for everyone. Stay tuned for updates and get ready to embark on a colorful journey unlike any other.</string>-->
    <string name="rank_one">1</string>
    <string name="rank_two">2</string>
    <string name="rank_three">3</string>
    <string name="rank_four">4</string>
    <string name="rank_five">5</string>
    <string name="rank_six">6</string>
    <string name="rank_seven">7</string>
    <string name="rank_eight">8</string>
    <string name="rank_nine">9</string>
    <string name="rank_ten">10</string>
    <string name="p">P</string>
    <string name="email">username</string>
    <string name="Password">password</string>
    <string name="Email">username</string>
    <string name="Login">login</string>

</resources>