<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cimon_colors"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:paddingLeft="35dp"
    android:paddingRight="35dp">


    <TextView
        android:id="@+id/Lead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/Leaderboard"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView0"
            android:text="@string/Rank"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dip"
            android:gravity="center"/>

        <TextView
            android:id="@+id/TextView1"
            android:text="@string/Name"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dip"
            android:gravity="center"/>

        <TextView
            android:id="@+id/TextView2"
            android:text="@string/Score"
            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dip"
            android:gravity="center"/>

    </TableRow>


    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_one"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_two"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_three"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_four"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_five"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_six"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_seven"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_eight"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_nine"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/rank_ten"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            android:textColor="#000000" />

        <TextView

            android:layout_weight="1"
            android:background="#2196F3"
            android:textColor="#000000"
            android:padding="10dip"
            android:gravity="center"/>

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="80dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Cimon"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_weight=".5"
            android:background="@drawable/btn_bg"
            android:text="@string/Cimon_Says" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Madness"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_weight=".5"
            android:background="@drawable/btn_bg"
            android:text="@string/Madness" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Frequency"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_weight=".5"
            android:background="@drawable/btn_bg"
            android:text="@string/Frequency_Beat" />
    </LinearLayout>


</TableLayout>


