<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/homecimon"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#757575" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:password="true"
        android:textColor="@color/white"
        android:textColorHint="#757575"
        tools:ignore="Deprecated,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_Button"
        android:layout_width="200dp"
        android:layout_height="91dp"
        android:backgroundTint="#00BCD4"
        android:onClick="onClick"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>