<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homecimon">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="676dp"
        android:background="#A4507E" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRight"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMiddle"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="5dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLeft"
        android:layout_width="42dp"
        android:layout_height="35dp"
        android:layout_marginEnd="370dp"
        android:layout_marginBottom="5dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add" />

    <ImageView
        android:id="@+id/edit_profile_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:src="@drawable/face"
        android:gravity="center"
        android:contentDescription="@string/picture" />

    <TextView
        android:id="@+id/profile_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/Profile_Name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_main"
        android:layout_marginStart="73dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/percentage"
        android:textColor="@color/white"
        android:textSize="23sp" />


    <TextView
        android:id="@+id/Time"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:padding="27dip"
        android:text="@string/Time"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/background_bar2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:layout_toEndOf="@id/Time"
        android:background="@drawable/stats_progress"
        android:indeterminate="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:layout_toEndOf="@id/Time"
        android:text="@string/percentage"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Time"
        android:layout_marginStart="73dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/percentage"
        android:textColor="@color/white"
        android:textSize="23sp"
        >
    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Logout_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>