<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/CimonSays_Button"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:backgroundTint="#FFA500"
        android:text="@string/cimon_says"
        android:textColor="#ffffff"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintHorzional_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        tools:ignore="TextSizeCheck"
        app:cornerRadius="0dp"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/Lightning_Button"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:backgroundTint="#FFA500"
        android:text="@string/speed"
        android:textColor="#ffffff"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintHorzional_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="TextSizeCheck"
        app:cornerRadius="0dp"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/Beat_Button"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:backgroundTint="#FFA500"
        android:text="@string/beat"
        android:textColor="#ffffff"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintHorzional_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"
        tools:ignore="TextSizeCheck"
        app:cornerRadius="0dp"
        android:onClick="onClick"
        />

</androidx.constraintlayout.widget.ConstraintLayout>




